objects/LLC_BI__Enable_Exclude__c.object
<CustomObject>
    <description>--DEPRECATED--</description>
    <fields>
        <fullName>LLC_BI__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- This optional field auto-populates via the system. It specifies the relationship in which to exclude a loan or debt in the exposure calculation.</description>
        <label>-D Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Enable_Excludes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Comments__c</fullName>
        <description>--DEPRECATED-- This optional text field may be set to required via field set and. Users populate this field to specify exclusions for a loan or deb; default is null.</description>
        <label>-D Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Debt__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- This optional field auto-populates via the system. It specifies which debt to exclude in the exposure calculation.</description>
        <label>-D Debt</label>
        <referenceTo>LLC_BI__Debt__c</referenceTo>
        <relationshipName>Enable_Excludes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Exclude_Reason__c</fullName>
        <description>--DEPRECATED-- This optional field may be set to required via a field set. Users select this field to specify reportable exclusions for a loan or debt; default is null.</description>
        <label>-D Exclude Reason</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>This loan is being paid out.</fullName>
                </value>
                <value>
                    <fullName>This loan&apos;s amount is being paid off by an in progress loan.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- This optional field auto-populates via the system. It specifies which loan to exclude in the exposure calculation.</description>
        <label>-D Loan</label>
        <referenceTo>LLC_BI__Loan__c</referenceTo>
        <relationshipName>Enable_Excludes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Product_Package__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>--DEPRECATED-- This optional field auto-populates via the system. It specifies the product package in which to exclude a loan or debt in the exposure calculation.</description>
        <label>-D Product Package</label>
        <referenceTo>LLC_BI__Product_Package__c</referenceTo>
        <relationshipName>Enable_Excludes</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>-D Enable Exclude</label>
    <nameField>
        <label>Enable Exclude Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>-D Enable Excludes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>